# GameBoyEmu

./: .gitignore  CMakeLists.txt  README.md  compile.bat  emulator.h  main.cpp  main.gb  run.bat  test.bat
include/: buffer.h  debugger.h  emulator.h  include.h  memory.h  registers.h  rom.h  util.h
lib/imgui/: imgui.cpp  imgui_memory_editor.h
rom/: main.asm  main.sym  makefile  out.comp
src/: buffer.h  debugger.cc  emulator.cc  emulator.h  include.h  main.cpp  memory.cc  memory.h  registers.h  rom.cc  rom.h
